Show listing thumbnails in admin

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -545,6 +545,14 @@
             color: #383d41;
         }
 
+        .listing-thumb {
+            width: 60px;
+            height: 60px;
+            object-fit: cover;
+            border-radius: 6px;
+            border: 1px solid #eee;
+        }
+
         .badge-pending {
 
 
@@ -1621,14 +1629,16 @@
         function displayListingsTable(listings) {
 
 
-            let html = '<table><thead><tr><th>Title</th><th>User</th><th>City</th><th>Price</th><th>Status</th><th>Date</th><th>Actions</th></tr></thead><tbody>';
+            let html = '<table><thead><tr><th>Title</th><th>User</th><th>City</th><th>Price</th><th>Image</th><th>Status</th><th>Date</th><th>Actions</th></tr></thead><tbody>';
 
 
             listings.forEach(listing => {
 
 
                 const hasImage = listing.image_url && listing.image_url.trim() !== '';
-
+                const imageCell = hasImage
+                    ? `<a href="${listing.image_url}" target="_blank" rel="noopener"><img class="listing-thumb" src="${listing.image_url}" alt="Listing image"></a>`
+                    : '<span style="color:#999;">-</span>';
 
                 html += `<tr>
 
@@ -1643,6 +1653,9 @@
 
 
                     <td>$${listing.price || 'N/A'}</td>
+
+
+                    <td>${imageCell}</td>
 
 
                     <td><span class="badge badge-${listing.status}">${listing.status}</span></td>
