Clarify email privacy note in welcome text

--- a/index.html
+++ b/index.html
@@ -565,7 +565,8 @@
       <div>
         When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
         <strong>Brocante</strong> - "In France, a shop or market where secondhand goods are sold". But the French pronunciation is slightly different than the English way. So that's how I got my name. <strong>Broke Ant</strong>.<br><br>
-        Happy selling and buying!!
+        Happy selling and buying!!<br><br>
+        Even though emails are hidden by default, either person can choose to include their own email or phone number in a message if they want.
       </div>
     </div>
   </div>
@@ -747,7 +748,8 @@ function closeWelcomeModal(e) {
           <div>
             When you pay the $2 you will have access to all the items in your city, and all the cities that you are eligible to see.<br><br>
             <strong>Brocante</strong> - "In France, a shop or market where secondhand goods are sold". But the French pronunciation is slightly different than the English way. So that's how I got my name. <strong>Broke Ant</strong>.<br><br>
-            Happy selling and buying!!
+            Happy selling and buying!!<br><br>
+            Even though emails are hidden by default, either person can choose to include their own email or phone number in a message if they want.
           </div>
         </div>
       </div>
