Reduce edit modal height and enable scroll

--- a/my-listings.html
+++ b/my-listings.html
@@ -296,9 +296,11 @@
     .modal-content {
       background: white;
       border-radius: 12px;
-      padding: 20px;
+      padding: 16px;
       width: 100%;
       max-width: 520px;
+      max-height: 85vh;
+      overflow-y: auto;
       box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     }
 
@@ -322,7 +324,7 @@
     }
 
     .modal-form .form-group {
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     .modal-form label {
