Add SEO meta tags, canonical URLs, and robots.txt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>BrokeAnt Market - Select Your City</title>
+  <title>BrokeAnt Marketplace | Buy, Sell & Trade Locally</title>
+    <meta name="description" content="BrokeAnt is a local marketplace to buy, sell, and trade items in your city. Discover listings nearby and post your own in minutes.">
+    <link rel="canonical" href="https://www.brokeant.com/">
+
+    <meta property="og:title" content="BrokeAnt Marketplace | Buy, Sell & Trade Locally">
+    <meta property="og:description" content="BrokeAnt is a local marketplace to buy, sell, and trade items in your city. Discover listings nearby and post your own in minutes.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.brokeant.com/">
+    <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+    <meta property="og:site_name" content="BrokeAnt Marketplace">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="BrokeAnt Marketplace | Buy, Sell & Trade Locally">
+    <meta name="twitter:description" content="BrokeAnt is a local marketplace to buy, sell, and trade items in your city. Discover listings nearby and post your own in minutes.">
+    <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     
