--- a/payment-status.html
+++ b/payment-status.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Payment Status - BrokeAnt</title>
+  <title>Payment Status | BrokeAnt Marketplace</title>
+    <meta name="description" content="Check your BrokeAnt payment status and account activation.">
+    <link rel="canonical" href="https://www.brokeant.com/payment-status.html">
+
+    <meta property="og:title" content="Payment Status | BrokeAnt Marketplace">
+    <meta property="og:description" content="Check your BrokeAnt payment status and account activation.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.brokeant.com/payment-status.html">
+    <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+    <meta property="og:site_name" content="BrokeAnt Marketplace">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Payment Status | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Check your BrokeAnt payment status and account activation.">
+    <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
