--- a/post-listing.html
+++ b/post-listing.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Post a Listing - BrokeAnt Marketplace</title>
+  <title>Post a Listing | BrokeAnt Marketplace</title>
+    <meta name="description" content="Post a new item for sale in your city on BrokeAnt. Add photos and details in minutes.">
+    <link rel="canonical" href="https://www.brokeant.com/post-listing.html">
+
+    <meta property="og:title" content="Post a Listing | BrokeAnt Marketplace">
+    <meta property="og:description" content="Post a new item for sale in your city on BrokeAnt. Add photos and details in minutes.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.brokeant.com/post-listing.html">
+    <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+    <meta property="og:site_name" content="BrokeAnt Marketplace">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Post a Listing | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Post a new item for sale in your city on BrokeAnt. Add photos and details in minutes.">
+    <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     
