--- a/login.html
+++ b/login.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login - BrokeAnt Marketplace</title>
+  <title>Login | BrokeAnt Marketplace</title>
+    <meta name="description" content="Log in to BrokeAnt to view listings, message sellers, and manage your items.">
+    <link rel="canonical" href="https://www.brokeant.com/login.html">
+
+    <meta property="og:title" content="Login | BrokeAnt Marketplace">
+    <meta property="og:description" content="Log in to BrokeAnt to view listings, message sellers, and manage your items.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.brokeant.com/login.html">
+    <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+    <meta property="og:site_name" content="BrokeAnt Marketplace">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Login | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Log in to BrokeAnt to view listings, message sellers, and manage your items.">
+    <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     
