--- a/my-listings.html
+++ b/my-listings.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Listings - BrokeAnt Marketplace</title>
+  <title>My Listings | BrokeAnt Marketplace</title>
+    <meta name="description" content="Manage your BrokeAnt listings, edit details, and request city access.">
+    <link rel="canonical" href="https://www.brokeant.com/my-listings.html">
+
+    <meta property="og:title" content="My Listings | BrokeAnt Marketplace">
+    <meta property="og:description" content="Manage your BrokeAnt listings, edit details, and request city access.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.brokeant.com/my-listings.html">
+    <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+    <meta property="og:site_name" content="BrokeAnt Marketplace">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="My Listings | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Manage your BrokeAnt listings, edit details, and request city access.">
+    <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     
