--- a/register.html
+++ b/register.html
@@ -3,7 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Register - BrokeAnt Marketplace</title>
+  <title>Create Account | BrokeAnt Marketplace</title>
+    <meta name="description" content="Create your BrokeAnt account to buy and sell locally. A small one?time fee unlocks listings in your city.">
+    <link rel="canonical" href="https://www.brokeant.com/register.html">
+
+    <meta property="og:title" content="Create Account | BrokeAnt Marketplace">
+    <meta property="og:description" content="Create your BrokeAnt account to buy and sell locally. A small one?time fee unlocks listings in your city.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.brokeant.com/register.html">
+    <meta property="og:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+    <meta property="og:site_name" content="BrokeAnt Marketplace">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Create Account | BrokeAnt Marketplace">
+    <meta name="twitter:description" content="Create your BrokeAnt account to buy and sell locally. A small one?time fee unlocks listings in your city.">
+    <meta name="twitter:image" content="https://www.brokeant.com/Cheerful%20ant%20on%20a%20forest%20path.png">
+
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     
