Add honeypot and compress listing uploads

--- a/register.html
+++ b/register.html
@@ -124,7 +124,16 @@
     .login-link a:hover {
       text-decoration: underline;
     }
-  
+
+    .honeypot {
+      position: absolute;
+      left: -10000px;
+      top: auto;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+    }
+
     .footer-corner {
       position: fixed;
       right: 12px;
@@ -161,6 +170,10 @@
   <h1>Create Account</h1>
   
   <form id="registerForm">
+    <div class="honeypot" aria-hidden="true">
+      <label for="website">Website</label>
+      <input type="text" id="website" name="website" autocomplete="off" tabindex="-1">
+    </div>
     <div class="form-group">
       <label for="email">Email *</label>
       <input type="email" id="email" name="email" required>
