--- a/post-listing.html
+++ b/post-listing.html
@@ -138,6 +138,15 @@
       font-size: 13px;
       margin-bottom: 20px;
     }
+
+    .honeypot {
+      position: absolute;
+      left: -10000px;
+      top: auto;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+    }
   
     .footer-corner {
       position: fixed;
@@ -179,6 +188,10 @@
   </div>
   
   <form id="listingForm">
+    <div class="honeypot" aria-hidden="true">
+      <label for="website">Website</label>
+      <input type="text" id="website" name="website" autocomplete="off" tabindex="-1">
+    </div>
     <div class="form-group">
       <label for="title">Item Title <span class="required">*</span></label>
       <input type="text" id="title" name="title" maxlength="150" placeholder="e.g., Mountain Bike, Coffee Table, PS5 Controller" required>
