--- a/frontend/login.html
+++ b/frontend/login.html
@@ -163,6 +163,8 @@
   
   <div class="register-link">
     Don't have an account? <a href="register.html">Sign up here</a>
+    <br>
+    <a href="/index.html">Browse images without logging in</a>
   </div>
 </div>
 
