Fix city headers and CURRENT_CITY values

--- a/city.html
+++ b/city.html
@@ -531,7 +531,7 @@
 </head>
 <body>
 <header>
-  <h1>🏪 BrokeAnt Marketplace - Melville</h1>
+  <h1>🏪 BrokeAnt Marketplace - <span id="cityTitle">City</span></h1>
   <div class="header-right">
     <div class="user-info">
       <div id="userEmail" style="display:none;"></div>
