--- a/melville/index.html
+++ b/melville/index.html
@@ -656,7 +656,7 @@
 </div>
 
 <script>
-  const CURRENT_CITY = 'melville';
+  const CURRENT_CITY = 'Melville';
   const INITIAL_ADS = 20;
   const ADS_COST = 2;
   
