--- a/yorkton/index.html
+++ b/yorkton/index.html
@@ -531,7 +531,7 @@
 </head>
 <body>
 <header>
-  <h1>🏪 BrokeAnt Marketplace - Melville</h1>
+  <h1>🏪 BrokeAnt Marketplace - Yorkton</h1>
   <div class="header-right">
     <div class="user-info">
       <div id="userEmail" style="display:none;"></div>
@@ -656,7 +656,7 @@
 </div>
 
 <script>
-  const CURRENT_CITY = 'melville';
+  const CURRENT_CITY = 'Yorkton';
   const INITIAL_ADS = 20;
   const ADS_COST = 2;
   
